@@ -10,6 +10,7 @@ internal
     - dnsr bug fix (ignore IPV6 AAAA records)
     - simrbl new feature: -t check_text
     - CVE-2011-0411: discard pending read data
+    - config file bugfixes: RED rules, DEFAULT_LOCAL_MAILER
 
 0.8.2
     - simta_gettimeofday() preffered interface
